0.12	Fixed timers menu (didn't work, after you read timers from server)
	Fixed pause function with "VDR on SmartTV"
	Updated to use the new function 'is_new' from "VDR on SmartTV"
	Added (key '5') jump to next mark in recordings. With use of restfulapi plugin
	Fixed standby problems when playing recordings.
	Fixed switchtimer when menu / recordingsmenu / playing recordings

0.11	Switch to Scheduler services for settings timers.
	Some fixes in the recorder & player routine
	Better support for "VDR on SmartTV" & check if availible.
	Lot of small fixes and changes.
	Added Menu INFO for IP/ DVR state
	Standby now stops the stream, getting back from standby reconnects to server & sets display
	Added initial support for MPD -> client plays stream from MPD-httpd
	Recordings Menu now show maps.
	Use of restfulapi
		Read Timers from Server
		Delete recording // if you want to Delete a recording, change in restfulapi/recordings.ccp line 46 DELETE to POST
	KillStream on standby can be set from settings.js

0.10	Added sub Listinges for use as Radio list / Protected List / SD/HD list etc
	(Use for Multicast Channels keyword MultiCast in Serveradres)
	(Multicast & streamdev is limited to 255 channels?)
	Left/ Right select list
	Switch to Radiolist with key 'TV' or 'RADIO' (give same keycode)
	Small fixes,  guideview, epg setup, timeshift.
	In guideview Get EPG only for highlighted channel to speedup scrolling.
	Added CanalSat to the EPG filter. Updated CDS/TVV routine.
	EPGinfo extended with videoinfo read from the stream.
	Direct recording with record button, next push stops recording. (Only for HDD models)
	Changed the Main Menu.
	TimeShift is possible for multicast channels. (Only for HDD models)
	Changed the style to round corners

	Support for recordings served by "VDR on SmartTV" plugin


0.06	More options in Main Menu:
	Audio selection normal,hearing_impaired,visually_impaired 
	cfg.media.subtitling.modepriority, cfg.media.subtitling.typepriority
	removed cds setting.